<resources>
    <!-- GLOBAL -->
    <string name="projectName">IO-app</string>
    <string name="appName">Komunikator dla biznesu</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- HOME WINDOW -->
    <string name="upcomingTasks">Zbliżające się terminy zadań:</string>
    <string name="welcomeText">Witaj z powrotem!</string>
    <string name="hour">TextView</string>
    <string name="date">TextView</string>

    <!-- SEEK WINDOW -->
    <string name="menu">menu</string>

    <!-- LOGIN/REGISTER -->
    <string name="loginHeader">Zaloguj się</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="logIn">Zaloguj</string>
    <string name="register">Zarejestruj się</string>
    <string name="loginImageDescription">Ikona ekranu logowania</string>
    <string name="continueText">Kontynuuj</string>
    <string name="backToLogin">Powrót do ekranu logowania</string>

    <!-- CALENDAR -->
    <string name="week">Tydzień</string>
    <string name="calendar">Kalendarz</string>
    <string name="today">Dziś</string>
    <string name="upcomingDays">Najbliższe dni</string>
    <string name="month">Miesiąc</string>

    <!-- TASKS AND GROUPS -->
    <string name="groupHeader">Grupy zadaniowe</string>
    <string name="addTask">Dodaj zadanie</string>
    <string name="typeGroupName">Podaj nazwę grupy</string>
    <string name="typeTaskName">Podaj nazwę zadania</string>
    <string name="typeTaskDescription">Podaj opis zadania</string>
    <string name="typeDate">Podaj datę</string>
    <string name="typeTime">Podaj godzinę</string>
    <string name="reminder">Przypomnienia</string>
    <string name="typeReminderName">Podaj nazwę przypomnienia</string>
    <string name="weekBefore">Tydzień przed</string>
    <string name="dayBefore">Dzień przed</string>
    <string name="assignUser">Przypisz użytkowników</string>
    <string name="add">Dodaj</string>
    <string name="confirm">Zatwierdź</string>
    <string name="groupName">Nazwa grupy zadaniowej</string>
    <string name="groupUserList">Członkowie grupy</string>
    <string name="leaderMarkDescription">Ikona lidera grupy</string>
    <string name="removeUserDescription">Usuń użytkownika z grupy</string>
    <string name="messageDescription">Napisz wiadomość</string>
    <string name="groupMoreDescription">Zadania grupy</string>
    <string name="groupUserListDescription">Lista użytkowników grupy</string>
    <string name="taskName">Nazwa zadania</string>
    <string name="assigmentUser">Przypisani użytkownicy:</string>
    <string name="deadline">Termin:</string>
    <string name="dateExample">01/01/2021</string>


    <!-- ADD GROUP -->
    <string name="labelTview">Podaj nazwę grupy</string>
    <string name="nextAddUsers">Dalej</string>
    <string name="userChooseTestV">Wybierz użytkowników</string>
    <string name="leaderChooseTestV">Wybierz lidera grupy</string>
    <string name="backToAdd">Wybrano</string>
    <string name="create">Utwórz grupę</string>
    <string name="seeFellows">Zobacz członków</string>
    <string name="taskToDo">Twoje zadania do wykonania:</string>



    <!-- USER PROFILE -->
    <string name="statusAvailable">Dostępny</string>
    <string name="statusUnavailable">Niedostępny</string>
    <string name="statusAway">Zaraz wracam</string>
    <string name="user">Użytkownik</string>
    <string name="userImageDescription">Opis zdjęcia użytkownika</string>

    <!-- CHAT -->
    <string name="messages">Wiadomości</string>
    <string name="sendDescription">Wyślij wiadomość</string>
    <string name="typeMessage">Wpisz wiadomość</string>
    <string name="chatName">Nazwa chatu</string>
    <string name="personalMessage">Lista użytkowników</string>
    <string name="groupMessage">Wiadomości grupowe</string>
    <string name="messageAuthor">Autor wiadomości</string>
    <string name="messageContent">Treść wiadomości</string>
    <string name="mainString" />
    <string name="OptionsString" />
    <string name="wyszukaj">Wyszukaj</string>
    <string name="kalendarz">Kalendarz</string>
    <string name="grupy">Grupy</string>
    <string name="zadania">Zadania</string>
    <string name="chat">Chat</string>

    
    <!--navigation-->
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="wybierz_dat">Wybierz datę</string>
    <string name="wybierz_czas">Wybierz czas</string>

</resources>