<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_view"
        android:title="@string/mainString"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:id="@+id/profile"
        android:title="Profil"
        android:icon="@drawable/ic_baseline_person_24" />

    <item
        android:id="@+id/calendar"
        android:title="@string/kalendarz"
        android:icon="@drawable/ic_baseline_calendar_today_24" />

    <item
        android:id="@+id/groups"
        android:title="@string/grupy"
        android:icon="@drawable/ic_baseline_group_24" />

    <item
        android:id="@+id/tasks"
        android:title="@string/zadania"
        android:icon="@drawable/ic_baseline_check_box_24" />

    <item
        android:id="@+id/chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_baseline_chat_24" />

    <item
        android:id="@+id/logout"
        android:title="Wyloguj"
        android:icon="@drawable/ic_baseline_login_24" />

</menu>