<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/txt_group_name"
        android:layout_width="197dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/groupHeader"
        android:textAlignment="viewEnd"
        android:textColor="#0a0a0a"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txt_group_change"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@android:drawable/ic_menu_my_calendar"
        android:ems="10"
        android:hint="@string/typeGroupName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_group_name" />

    <TextView
        android:id="@+id/txt_task_add_view"
        style="@style/textBig"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/addTask"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_group_change" />

    <EditText
        android:id="@+id/txt_title_change"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/typeTaskName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_task_add_view" />


    <TextView
        android:id="@+id/txt_reminder_view"
        style="@style/textBig"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="132dp"
        android:text="@string/reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_change" />

    <EditText
        android:id="@+id/txt_reminder"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:autofillHints="Podaj nazwę przypomnienia"
        android:ems="10"
        android:hint="@string/typeReminderName"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_reminder_view" />

    <CheckBox
        android:id="@+id/btn_week"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:text="@string/weekBefore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_reminder" />

    <CheckBox
        android:id="@+id/btn_day"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:text="@string/dayBefore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/btn_week"
        app:layout_constraintTop_toBottomOf="@+id/txt_reminder" />

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="536dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="141dp"
        android:layout_height="47dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:text="@string/wybierz_dat"
        android:textAlignment="gravity"
        android:textAppearance="@style/textBlue"
        android:textColor="@color/accentBlue"
        android:textSize="12sp"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_change" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="141dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="56dp"
        android:text="@string/wybierz_czas"
        android:textAppearance="@style/textBlue"
        android:textColor="@color/accentBlue"
        android:textSize="12sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_change" />

    <Spinner
        android:id="@+id/spinner_members"
        android:layout_width="297dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_date" />


</androidx.constraintlayout.widget.ConstraintLayout>