<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupName"
            style="@style/textBlue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="@dimen/padding"
            android:text="@string/groupUserList"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupLeaderIcon"
            app:layout_constraintTop_toTopOf="@id/groupName"
            app:layout_constraintLeft_toRightOf="@id/groupName"
            app:srcCompat="@drawable/ic_leader"
            android:layout_marginStart="@dimen/padding"
            android:contentDescription="@string/leaderMarkDescription"
            android:visibility="visible"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupRemove"
            app:srcCompat="@drawable/ic_user_remove"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/padding"
            android:contentDescription="@string/removeUserDescription"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupUserMessage"
            app:srcCompat="@drawable/ic_message"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/groupRemove"
            android:layout_margin="@dimen/padding"
            android:contentDescription="@string/messageDescription"
            android:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>