<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat">

    <TextView
        android:id="@+id/chatHeader"
        style="@style/textBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24"
        android:layout_marginEnd="@dimen/margin24"
        android:text="@string/messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chatName"
        style="@style/textBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24"
        android:layout_marginStart="@dimen/margin24"
        android:layout_marginEnd="@dimen/margin24"
        android:text="@string/chatName"
        app:layout_constraintTop_toBottomOf="@id/chatHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/chatRecyclerView"
        app:layout_constraintTop_toBottomOf="@id/chatName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin24"
        app:layout_constraintBottom_toTopOf="@id/message_input" />

    <ImageButton
        android:id="@+id/sendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin24"
        android:layout_marginBottom="@dimen/margin24"
        android:contentDescription="@string/sendDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_send"
        android:background="?android:attr/selectableItemBackground" />

    <EditText
        android:id="@+id/message_input"
        style="@style/textRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin24"
        android:layout_marginEnd="@dimen/margin24"
        android:layout_marginBottom="@dimen/margin24"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/typeMessage"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendMessage"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>