<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeWindow"
    android:id="@+id/DrawerLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_menu_24" />

    <TextView
        android:id="@+id/hourTextV"
        android:layout_width="173dp"
        android:layout_height="38dp"
        android:layout_marginTop="60dp"
        android:text="@string/hour"
        android:textAlignment="viewEnd"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTextV"
        android:layout_width="361dp"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:text="@string/date"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="@+id/hourTextV"
        app:layout_constraintTop_toBottomOf="@+id/hourTextV" />

    <TextView
        android:id="@+id/welcomeTextV"
        style="@style/textBig"
        android:layout_width="285dp"
        android:layout_height="29dp"
        android:layout_marginEnd="80dp"
        android:text="@string/welcomeText"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/hourTextV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="@+id/hourTextV" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="378dp"
        android:layout_height="225dp"
        android:layout_marginTop="5dp"
        android:dateTextAppearance="@style/textRegular"
        android:weekDayTextAppearance="@style/textGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextV" />

    <TextView
        android:id="@+id/termsTextV"
        style="@style/textGrey"
        android:layout_width="347dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/upcomingTasks"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawermenu"
        app:headerLayout="@layout/header"
        tools:ignore="MissingConstraints" />

</androidx.drawerlayout.widget.DrawerLayout>